Add Header 4 in HTML file and same style in CSS file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello New Branch Virsion 1 !</h1>
+    <h1>Hello New Branch Virsion 1</h1>
+    <h3>We Learned Git & GitHub Broooo</h3>
     <script src="app.js"></script>
 </body>
 </html>
